--- a/style.css
+++ b/style.css
@@ -6,18 +6,25 @@
   --Charcoal-Grey: hsl(235, 18%, 26%);
   --Grey: hsl(231, 7%, 60%);
   --White: hsl(0, 0%, 100%);
+  --text-font: 16px;
+}
+
+.signup-form {
+  opacity: 1;
+  z-index: 100;
+  transform: scale(1);
+  transition: all 0.2s cubic-bezier(0.17, 0.67, 0.83, 0.67);
+}
+
+.hide-signup-form {
+  opacity: 0;
+  transform: scale(0.8);
+  z-index: -100;
+  transition: all 0.2s cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
 .desktop-img {
   display: none;
-}
-
-.success-message {
-  display: none;
-}
-
-.signup-form {
-  display: block;
 }
 
 body {
@@ -25,44 +32,48 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: var(--White);
+  background-color: var(--Charcoal-Grey);
   color: var(--Charcoal-Grey);
   font-family: "Roboto", sans-serif;
-  margin: 0 10px;
+  margin: 0;
   min-height: 100vh;
+}
+
+.newsletter-card {
+  max-width: 786px;
+  min-width: 365px;
+  height: 100%;
+  background-color: var(--White);
+  border-radius: 1rem;
 }
 
 .card__image img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: fill;
+  border-radius: 1rem 1rem 0 0;
   /* border-radius: 0.5rem; */
 }
 
 h2 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 700;
   margin: 1.5rem 0;
 }
 
 p {
   margin: 0;
-  font-size: 16px;
-}
-
-.newsletter-card {
-  width: 367px;
-  height: auto;
+  font-size: var(--text-font);
 }
 
 .card__content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   background-color: var(--White);
-  border-radius: 0.5rem;
+  border-radius: 0;
   padding: 0.5rem 1.5rem;
-  margin-bottom: 2rem;
+  border-radius: 0 0 1rem 1rem;
 }
 
 .card__list ul {
@@ -74,12 +85,13 @@ p {
 li {
   /** the image will be vertically aligned in the center **/
   background: url(/assets/images/icon-list.svg) no-repeat;
-  height: 50px;
+  background-size: 18px;
+  height: auto;
 
   /** move the text to the right **/
-  padding: 2px 0 0 40px;
-  font-size: 16px;
-  margin-bottom: 0.4rem;
+  padding: 0 0 0 40px;
+  font-size: var(--text-font);
+  margin: 0.8rem 0;
 }
 
 .card__content .labels {
@@ -89,24 +101,36 @@ li {
 }
 
 label {
-  font-size: 0.75rem;
+  font-size: 0.8rem;
   font-weight: 700;
 }
 
-#error {
+.labels .error {
   display: none;
+}
+
+.labels .show-error {
+  display: block;
+  color: hsl(4, 100%, 67%);
 }
 
 .card__content input {
   width: 100%;
-  height: 3.5rem;
-  font-size: 16px;
+  height: 4rem;
+  font-size: var(--text-font);
   padding: 0 0 0 1.5rem;
   border-radius: 0.5rem;
   border: 1px solid var(--Grey);
   box-sizing: border-box;
   margin-bottom: 1.5rem;
   color: var(--Dark-Slate-Grey);
+}
+
+.card__content .show-input-error {
+  border: 1px solid hsl(4, 100%, 67%);
+  outline: 1px solid hsl(4, 100%, 67%);
+  background-color: rgb(242, 195, 192);
+  color: hsl(4, 100%, 67%);
 }
 
 input:focus {
@@ -119,48 +143,102 @@ input::placeholder {
 
 button {
   width: 100%;
-  height: 3.5rem;
+  height: 4rem;
   background-color: var(--Dark-Slate-Grey);
-  border-radius: 0.5rem;
+  border-radius: 0.8rem;
   color: var(--White);
-  font-size: 16px;
+  font-size: var(--text-font);
   font-weight: 500;
   text-align: center;
   padding: 0;
   cursor: pointer;
+  margin-bottom: 1.5rem;
 }
 
 input:focus {
   border: none;
 }
 
+.success-message {
+  position: absolute;
+  max-width: 786px;
+  min-width: 365px;
+  opacity: 0;
+  z-index: -100;
+  box-sizing: border-box;
+  transform: scale(0.8);
+  transition: all 0.2s cubic-bezier(0.17, 0.67, 0.83, 0.67);
+}
+
+.show-success {
+  z-index: 100;
+  opacity: 1;
+  transform: scale(1);
+  transition: all 0.2s cubic-bezier(0.17, 0.67, 0.83, 0.67);
+}
+
 .success__prompt {
-  width: 365px;
-  height: auto;
-}
-
-.prompt__content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: grid;
+  place-items: center;
+  height: 93vh;
+  grid-template-rows: 5fr 1fr;
   background-color: var(--White);
-  border-radius: 0.5rem;
-  padding: 0.5rem 1.5rem;
-  margin-bottom: 2rem;
+  border-radius: 1rem;
+  padding: 1.5rem 2rem;
 }
 
-.prompt__content .prompt__image {
-  width: 20%;
-  height: 20%;
-  object-fit: cover;
-  border-radius: 0.5rem;
-}
-
-.prompt__content button {
-  margin-top: 15vh;
-}
-
-.prompt__content p span {
-  font-size: 16px;
+span {
   font-weight: 700;
+}
+
+@media screen and (width >= 786px) {
+  .newsletter-card {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .card__image {
+    padding: 1rem;
+    grid-column-start: 2;
+  }
+
+  .card__image img {
+    height: 100%;
+    object-fit: cover;
+    border-radius: 1.5rem;
+  }
+
+  .card__content {
+    box-sizing: border-box;
+    padding: 2rem;
+    grid-row-start: 1;
+    border-radius: 1.5rem 0 0 1.5rem;
+    width: 100%;
+  }
+
+  .success-message {
+    align-items: center;
+  }
+
+  .success__prompt {
+    width: 400px;
+    height: 40vh;
+    border-radius: 1.5rem;
+  }
+
+  .card__content input {
+    height: 3.5rem;
+  }
+
+  .card__content button {
+    height: 3.5rem;
+  }
+
+  .mobile-img {
+    display: none;
+  }
+
+  .desktop-img {
+    display: block;
+  }
 }
